# crate-template

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-guidance.yml  pr-welcome.yml  release-plz.yml
cli-template/: CHANGELOG.md  Cargo.toml
crate-template/: CHANGELOG.md  Cargo.toml
crate-template/src/: lib.rs
