[package]
name = "atliac-crate-template"
version = "0.0.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
